# dejavu

./: CMakeLists.txt  README.md  dejavu.h  shared.h
payload/: CMakeLists.txt  gpio.c  gpio.h  linker.x  main.c  main.h  pervasive.c  pervasive.h  spi.c  spi.h  start.s  state.c  state.h  syscon.c  syscon.h  utils.h
payload/FatFs/: diskio.c  ff.c  ffconf.h
payload/libc/: string.c
payload/msif/: ms.c  ms.h  msif.c  msif.h  msif_auth.c  msif_auth.h  msif_instr.h
plugin/: exports.yml  fs.c  fs.h  main.c  main.h  resume.S
